Update manifest with GitHub Pages URL

--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-    "url": "https://yourdomain.com",
+    "url": "https://dimonvsitf.github.io/ton-miniapp/",
     "name": "Corporate Service Provider",
-    "iconUrl": "https://yourdomain.com/icon.png",
-    "termsOfUseUrl": "https://yourdomain.com/terms",
-    "privacyPolicyUrl": "https://yourdomain.com/privacy"
+    "iconUrl": "https://dimonvsitf.github.io/ton-miniapp/icon.png",
+    "termsOfUseUrl": "https://dimonvsitf.github.io/ton-miniapp/terms",
+    "privacyPolicyUrl": "https://dimonvsitf.github.io/ton-miniapp/privacy"
 }
